--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ readme = "README.md"
 
 
 [dependencies]
+bincode = "1.1.2"
 libc = "0.2"
 libfaster-sys = { path = "libfaster-sys", version = "0.1.0" }
+serde_derive = "1.0.89"
 
