--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ readme = "README.md"
 bincode = "1.1.2"
 libc = "0.2"
 libfaster-sys = { path = "libfaster-sys", version = "0.1.0" }
+serde = "1.0.89"
 serde_derive = "1.0.89"
 
